# tcr_drone_vison

./: .gitignore  CMakeLists.txt  onnx2engine.sh  readme.md
assets/: tiny_resnet.engine  tiny_resnet.trt
assets/img1/: 1.txt  10.txt  11.txt  12.txt  13.txt  14.txt  15.txt  16.txt  17.txt  18.txt  19.txt  2.txt  20.txt  21.txt  22.txt  23.txt  24.txt  25.txt  26.txt  27.txt  28.txt  29.txt  3.txt  30.txt  31.txt  32.txt  33.txt  34.txt  35.txt  36.txt  37.txt  38.txt  39.txt  4.txt  40.txt  41.txt  42.txt  43.txt  44.txt  45.txt  (+5 more)
calibration/: calibrate_camera.cpp  calibrate_handeye.cpp  calibrate_robotworld_handeye.cpp  capture.cpp
configs/: ascento.yaml  calibration.yaml  camera.yaml  demo.yaml  example.yaml  handeye.yaml  sentry.yaml  standard3.yaml  standard4.yaml  uav.yaml
io/gimbal/: gimbal.cpp  gimbal.hpp
io/hikrobot/: hikrobot.cpp
src/: auto_aim_debug_mpc.cpp  sentry_debug.cpp  standard_mpc.cpp
tasks/auto_aim/: CMakeLists.txt  classifier.cpp  classifier.hpp  detector.cpp  target.cpp  target.hpp  tracker.cpp
tasks/auto_aim/multithread/: mt_detector.cpp  mt_detector.hpp
tasks/auto_aim/yolos/: yolo11.cpp  yolo11.hpp  yolov5.cpp  yolov5.hpp  yolov8.cpp  yolov8.hpp
tasks/auto_buff/: CMakeLists.txt  yolo11_buff.cpp  yolo11_buff.hpp
tasks/omniperception/: CMakeLists.txt
tests/: camera_detect_test.cpp  engine_dump_test.cpp  gimbal_test.cpp  handeye_test.cpp
